# nest

./: .gitignore  HISTORY.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
nest/: __init__.py  __version__.py  bytes.py  main.py  pdf.py  translate.py  weather.py
test/: test_pdf.py  test_translate.py  test_weather.py
