[tool.poetry]
name = "nest"
version = "0.1.0"
description = "Nest is a collection of tools."
authors = ["shiniao <zhuzhezhe95@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shiniao/nest"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.1.0"}
requests = "^2.25.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
nest = 'nest.main:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
